# PySprint

./: .codeclimate.yml  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  README.md  _settings.ini  appveyor.yml  azure-pipelines.yml  build-wheels.sh  codecov.yml  environment.yml  evaluate.py  generatorCore.py  generatorUI.py  help.py  index.ipynb  loadingData.py  logic.py  main.py  plotwidget.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  smoothing.py  tox.ini  ui.py
.ci/: conda_upload.sh  deploy.sh  deployi686.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.ipynb_checkpoints/: index-checkpoint.ipynb
Interferometry/: _settings.ini  logic.py  main.py
api/: methods.py
binder/: environment.yml  postBuild
build_tools/: build-conda-package.sh
conda-recipe/: meta.yaml
core/: cff_fitting.py  edit_features.py  evaluate.py  generator.py  loading.py  smoothing.py
doc/: -100.txt  -150.txt  -200.txt  -50.txt  0.txt  100.txt  150.txt  200.txt  50.txt  Generator.ipynb  Methods.ipynb  REFERENCES.md  conf.py  doc_requirements.txt  hu_dataset.ipynb  hu_fft.ipynb  hu_intro.ipynb  hu_minmax.ipynb  hu_misc.ipynb  hu_phase.ipynb  hu_spp.ipynb  hu_wft.ipynb  index.rst  modules.rst  pysprint.core.bases.rst  pysprint.core.io.rst  pysprint.core.methods.rst  pysprint.core.rst  pysprint.mpl_tools.rst  pysprint.rst  pysprint.tests.rst  pysprint.utils.rst  spp.txt  test_notebooks.py
example_datasets/: URES0069.trt
examples/: NOISYReference.txt  NOISYinitSpectrum.txt  autodetect.txt  (+14 more)
(+173 files in other folders)
