[package]
authors = ["Leéh Péter <leeh123peter@gmail.com>"]
name = "pysprint"
version = "0.1.0"
edition = "2018"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
path = "third_party/"

[dependencies]
rayon = "1.5"
ndarray = "0.13.0"

[lib]
name = "pysprint"
crate-type = ["cdylib"]